7주차 강의 완료